# gaokao-tianzhiyuan.agent

./: .dockerignore  .env.docker.example  .gitignore  README.md  docker-compose.yml
.github/: CI.md
.github/workflows/: ci.yml  release.yml
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: e7780a90b130_initial_catalog_schema.py
apps/api/app/: __init__.py  config.py  db.py  main.py
apps/api/app/models/: __init__.py  access_control.py  catalog.py  content.py  ingestion.py
apps/api/app/routers/: admin.py  chat.py  platform.py  public.py
apps/api/app/scripts/: __init__.py  seed_catalog.py
apps/api/app/services/: __init__.py  access_control.py  catalog.py  chat.py  featured_content.py  ingestion.py  llm.py  media_analysis.py  media_analysis_events.py  platform.py  publishing.py  skills.py  wechat_official_account_crypto.py
apps/api/tests/: conftest.py  test_access_control_service.py  test_admin_api.py  test_admin_content_sections_api.py  test_admin_content_summary_api.py  test_admin_ranking_reference_api.py  test_admin_related_content_api.py  test_chat_api.py  test_chat_services.py  test_config.py  test_content_invariants.py  test_cors.py  test_health.py  test_ingestion.py  test_llm_provider.py  test_platform_api.py  test_public_catalog_api.py  test_publishing.py  test_wechat_official_account_crypto.py
apps/web/: .env.example  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: admin-content-sections-api.ts  admin-content-summary-api.ts  admin-featured-content-api.ts  admin-media-analysis-api.ts  admin-ranking-reference-api.ts  admin-related-content-api.ts  admin-review-api.ts  admin-smart-analysis-api.ts  chat-api.ts  chat-risk-flags.ts  platform-api.ts  platform-entitlement-labels.ts  platform-entitlements.ts  platform-events.ts  public-content-api.ts
apps/web/tests/: admin-content-sections-api.test.ts  admin-content-sections.test.tsx  admin-content-summary.test.tsx  admin-dashboard.test.tsx  admin-media-analysis-api.test.ts  admin-missing-image-filter.test.tsx  admin-page.test.tsx  admin-ranking-reference.test.tsx  admin-related-content-api.test.ts  admin-related-content.test.tsx  admin-review-api.test.ts  admin-scheduled-missing-image-filter.test.tsx  chat-api.test.ts  chat-page.test.tsx  chat-risk-flags.test.ts  chat-workspace.test.tsx  next-build-runtime.test.ts  platform-api.test.ts  (+9 more)
data/: catalog.json  featured-content.json
deploy/linux/: README.md  api.production.env.example  web.production.env.example
deploy/windows/: README.md  api.production.env.example  web.production.env.example
docs/operations/: local-handover-runbook.md
scripts/: smoke-local-stack.ps1  smoke-wechat-official-account.ps1  start-local-stack.ps1  stop-local-stack.ps1  verify-gitignore.ps1  verify-platform-foundation.ps1  verify-project.ps1  verify-public-foundation.ps1  verify-web-babelrc.ps1  wechat_aes_helper.py
(+118 files in other folders)
