[project]
name = "gaokao-agent-api"
version = "0.1.0"
description = "Backend API for the gaokao agent project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic-settings>=2.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.24.0"
]

[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
